--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "abuseipdb": "^1.0.1",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv": "^6.2.7",
     "dotenv": "^16.0.3",
@@ -20,7 +21,8 @@
     "node-xlsx": "^0.21.0",
     "nodemailer": "^6.9.1",
     "pino": "^8.6.1",
-    "pino-pretty": "^9.1.1"
+    "pino-pretty": "^9.1.1",
+    "rate-limiter-flexible": "^3.0.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node -- src/app.js"
